--- a/app/plugins/yunzhiclub/schedule/components/index/web-app/app/view/add.html
+++ b/app/plugins/yunzhiclub/schedule/components/index/web-app/app/view/add.html
@@ -11,7 +11,7 @@
     <div class="row" ng-if="isOpen">
         <div class="col-md-12">
             <div class="alert alert-success" role="alert">
-                按照大家提交需求的先后顺序，在排课时尽量满足大家对上课时间和地点的要求，但是在实训周由于课时量大，实验室资源紧张没有办法完全满足大家的要求，所以将对部分老师的要求进行微调，还请大家能够理解。
+                我们将按照大家提交需求的先后顺序，在排课时尽量满足大家对上课时间和地点的要求。由于实训周课时量大，实验室资源紧张，部分课程安排无法得到充分满足，实验室将对其进行调整，请大家理解支持。谢谢您的配合。
             </div>
             <form ng-submit="submit()">
                 <div class="form-group">
