--- a/app/themes/tute/assets/css/style.css
+++ b/app/themes/tute/assets/css/style.css
@@ -190,8 +190,7 @@ content.soft p {
 
 .news ul li {
     border-bottom: 1px dotted #3eb39c;
-    margin-top: 16px;
-    padding-bottom: 5px;
+    padding: 5px 0px;
 }
 
 .news ul li .date {
@@ -200,7 +199,8 @@ content.soft p {
 }
 
 .news ul li .list-icon {
-    color: #f0cc33;
+    color: #E37B40;
+    margin-right: 5px;
 }
 
 .index-left {
@@ -223,11 +223,21 @@ content.soft p {
     border-bottom: 4px double #cd5c5c;
 }
 
-.rules h4{
+.rules h4 {
     text-align: left;
 }
 
 .rules ol li {
     list-style-type: decimal;
     border: none;
+}
+
+.video h4 {
+    text-align: left;
+}
+
+.video ul li {
+    margin-top: 20px;
+    padding-bottom:5px;
+    border-bottom: 1px solid #3eb39c;
 }
