--- a/app/themes/tute/layouts/tute.htm
+++ b/app/themes/tute/layouts/tute.htm
@@ -12,10 +12,14 @@ description = "tute layout"
     <meta name="generator" content="OctoberCMS">
     <link rel="icon" type="image/png" href="{{ 'assets/images/october.png'|theme }}">
     <link href="{{ 'assets/css/vendor.css'|theme }}" rel="stylesheet">
+    <link href="{{ 'assets/css/vendor.css'|theme }}" rel="stylesheet">
     <link href="{{ 'assets/css/theme.css'|theme }}" rel="stylesheet">
     <link href="{{ 'assets/css/bootstrap.min.css'|theme }}" rel="stylesheet">
     <link href="{{ 'assets/css/style.css'|theme }}" rel="stylesheet">
+    <link href="{{ 'assets/vendor/plyr/plyr.css'|theme }}" rel="stylesheet">
     {% styles %}
+
+    <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
 </head>
 
 <body>
@@ -36,8 +40,8 @@ description = "tute layout"
     </footer>
     
     <!-- Scripts -->
-    <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
     <script src="{{ 'assets/vendor/bootstrap.js'|theme }}"></script>
+    <script src="{{ 'assets/vendor/plyr/plyr.js'|theme }}"></script>
     <script src="{{ 'assets/javascript/app.js'|theme }}"></script>
     <script src="https://cdn.bootcss.com/angular.js/1.7.7/angular.min.js"></script>
     <script src="https://cdn.bootcss.com/angular-ui-router/1.0.22/angular-ui-router.min.js"></script>
