--- a/app/plugins/yunzhiclub/nav/components/index/default.htm
+++ b/app/plugins/yunzhiclub/nav/components/index/default.htm
@@ -4,7 +4,7 @@
             <li><a href="/" class="{% if this.page.id == 'index' %}active{% endif %}">首页</a></li>
             <li><a href="/about_us" class="{% if this.page.id == 'about_us' %}active{% endif %}">中心概况</a></li>
             <li><a href="/news" class="{% if (strpos(this.page.id, 'news') is not same as(false)) %}active{% endif %}">新闻动态</a></li>
-            <li><a href="/" class="{% if this.page.id == 'teaching' %}active{% endif %}">实验教学</a></li>
+            <li><a href="/teaching" class="{% if (strpos(this.page.id, 'teaching') is not same as(false)) %}active{% endif %}">实验教学</a></li>
             <li><a href="/rules" class="{% if (strpos(this.page.id, 'rules') is not same as(false)) %}active{% endif %}">规章制度</a></li>
             <li><a href="/video" class="{% if this.page.id == 'video' %}active{% endif %}">教学视频</a></li>
             <li><a href="/soft" class="{% if this.page.id == 'soft' %}active{% endif %}">实验软件</a></li>
